--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,8 @@ title                    : "Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://mxh137.github.io # The base hostname & protocol for your site e.g. "https://mxh137.github.io",
-                                                           # or if you already have some other page hosted on Github then use "https://mxh137.github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : https://mxh137.github.io
+baseurl                  : ""
 repository               : "mxh137/mxh137.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
