--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,10 @@ repository               : "mxh137/mxh137.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Xianghe Ma（马相禾）"
+  location         : "Beijing China"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "maxianghe_2002@163.com" 
 
   # Academic websites
   academia         : # URL
