--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Harun"
+title                    : Harun
 title_separator          : "-"
 name                     : &name "Harun"
 description              : &description " Python Developer | Aspiring Machine Learning Engineer "   # Update this with a general description of your site, this is the default if not overridden by a page
