--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,26 +8,26 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Home"
+    url: /home/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Skills"
+    url: /skills/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Experince"
+    url: /experience/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
+  - title: "ML Project"
+    url: /ml-projects/
+    
+  - title: "Resume"
+    url: /resume/
+
   - title: "Blog Posts"
     url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
     
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
