--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,23 +8,49 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
+
+main:
   - title: "Home"
-    url: /home/
+    url: /
 
   - title: "Skills"
-    url: /skills/    
+    url: /skills/
 
-  - title: "Experince"
-    url: /experience/    
-    
-  - title: "ML Project"
+  - title: "Experience"
+    url: /experience/
+
+  - title: "ML Projects"
     url: /ml-projects/
-    
+
   - title: "Resume"
     url: /resume/
 
   - title: "Blog Posts"
     url: /year-archive/
+    
+  # - title: "CV"
+  #   url: /cv-json/
+    
+  # - title: "Guide"
+  #   url: /markdown/
+
+  # - title: "Home"
+  #   url: /home/
+
+  # - title: "Skills"
+  #   url: /skills/    
+
+  # - title: "Experince"
+  #   url: /experience/    
+    
+  # - title: "ML Project"
+  #   url: /ml-projects/
+    
+  # - title: "Resume"
+  #   url: /resume/
+
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
   # - title: "CV"
   #   url: /cv-json/
