--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,11 +7,10 @@
 # NOTE that only one of the CV options should be selected, the first is for the
 #      Markdown formatted page while the second is generated using JSON.
 
-main:
 
 main:
   - title: "Home"
-    url: /harun/
+    url: /https://harunbansode.github.io/harun/
 
   - title: "Skills"
     url: /skills/
