Update Home URL in navigation.yml

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
 
 main:
   - title: "Home"
-    url: /https://harunbansode.github.io/harun/
+    url: /home/
 
   - title: "Skills"
     url: /skills/
