--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Saad Salman Beg" #"https://www.linkedin.com/in/ssbeguh/" # Username
+  linkedin         : "ssbeguh" #"https://www.linkedin.com/in/ssbeguh/" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
