--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
 title                    : "Saad Salman Beg"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Saad Salman Beg"
 description              : &description "Computer Science student at the University of Houston."   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://saadbeg2.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
@@ -23,7 +23,7 @@ repository               : "Saadbeg2/Saadbeg2.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/profile.jpeg"
+  avatar           : "profile.jpeg"
   name             : "Saad Salman Beg"
   bio              : "Computer Science student at the University of Houston."
   location         : "Houston, TX"
