Replace 'Resume' with 'Experience' in navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "About"
     url: /
 
-  - title: "Resume"
-    url: /cv/
+- title: "Experience"
+  url: /experience/
 
   - title: "Projects"
     url: /projects/
