Update navigation links for Experience and Projects

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,10 +10,11 @@
 main:
   - title: "About"
     url: /
-    
-- title: "Experience"
-  url: /experience/
+
+  - title: "Experience"
+    url: /experience/
 
   - title: "Projects"
-    url: /projects/
+    url: /portfolio/
+
 
