--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,8 +13,9 @@ main:
 
   - title: "Experience"
     url: /experience/
-
+    
   - title: "Projects"
-    url: /portfolio/
+    url: /projects/
+
 
 
